add prev and next links

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -22,7 +22,7 @@ outputs:
 pygmentsCodefences: true
 pygmentsStyle: pygments
 
-disqusShortname: shortname
+disqusShortname:
 
 taxonomies:
   tag: tags
