--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -14,7 +14,7 @@ params:
     Made with [Hugo](https://gohugo.io/) &bull;
     Themed by [USWDS](https://designsystem.digital.gov/) &bull;
     Deployed to [Netlify](https://www.netlify.com/) &bull;
-    Content in [Git](https://github.com/zwbetz-gh/uswds-hugo-theme)
+    Content in [GitHub](https://github.com/zwbetz-gh/uswds-hugo-theme)
 
 outputs:
   home: [HTML, RSS, JSON]
