--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -16,6 +16,7 @@ params:
     Deployed to [Netlify](https://www.netlify.com/) &bull;
     Content in [GitHub](https://github.com/zwbetz-gh/uswds-hugo-theme)
   search: true
+  show_prev_next_links: true
 
 outputs:
   home: [HTML, RSS, JSON]
