--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   publish = "exampleSite/public"
-  command = "cd exampleSite && hugo --gc --themesDir ../.."
+  command = "cd exampleSite && hugo --themesDir ../.."
 
 [build.environment]
-  HUGO_VERSION = "0.80.0"
+  HUGO_VERSION = "0.81.0"
   HUGO_THEME = "repo"
-  HUGO_BASEURL = "https://uswds-hugo-theme.netlify.com/"
+  HUGO_BASEURL = "https://uswds-hugo-theme.netlify.app"
