--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -18,6 +18,7 @@ params:
   show_footer_site_last_updated: true
   show_footer_debug: true
   search: true
+  search_minify: false
   show_prev_next_links: false
   show_tags: false
 
