separate json index for blog list

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -27,6 +27,10 @@ outputs:
     - HTML
     - RSS
     - JSON
+  section:
+    - HTML
+    - RSS
+    - JSON
 
 pygmentsCodefences: true
 pygmentsStyle: pygments
