new param: use_nav_icon

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -22,6 +22,7 @@ params:
   show_prev_next_links: false
   show_tags: false
   use_purged_css: false
+  use_nav_icon: true
 
 outputs:
   home:
@@ -50,12 +51,15 @@ imaging:
 menu:
   nav:
     - name: Home
+      pre: home
       url: /
       weight: 1
     - name: Blog
+      pre: edit
       url: /blog/
       weight: 2
     - name: RSS
+      pre: rss_feed
       url: /index.xml
       weight: 3
 
