--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -55,7 +55,7 @@ menu:
       url: /
       weight: 1
     - name: Blog
-      pre: edit
+      pre: folder
       url: /blog/
       weight: 2
     - name: RSS
